Grammar.txt
<drink> ::= <drink-name> <ingredients> <price>

<drink-list> ::= "Drinks: " <drinks>

<drinks> ::= <drink> | <drink> <drinks>

<drink-name> ::= <identifier>

<ingredients> ::= "Ingredients:" <ingredient-list>

<ingredient-list> ::= <ingredient> | <ingredient> <ingredient-list>

<ingredient> ::= <quantity> <ingredient-name>

<quantity> ::= <number> <unit>

<unit> ::= "ml" | "oz" | "dash" | "splash"

<ingredient-name> ::= "Liquor" | "Syrup" | "Juice" | "Garnish" | <identifier>

<price> ::= "Price:" <number> <currency>

<currency> ::= "USD" | "EUR" | "GBP" | "JPY"

<identifier> ::= <letter> | <letter> <identifier-chars>

<number> ::= <digit> | <digit> <number>

<serve-drink> ::= "serve"  <drink>

<create-drink> ::= "Create" <drink>

<list-drinks> ::= "Drinks: " <drinks>

<letter> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"
<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
